--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .container {
   width: 100vw;
@@ -20,4 +21,19 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+button {
+  position: absolute;
+  top: 90%;
+  padding: 3px;
+  width: 145px;
+  height: 60px;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 14px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: aliceblue;
+  border: 3px solid;
+  background-color: rgb(248, 198, 46);
 }
