--- a/style.css
+++ b/style.css
@@ -8,26 +8,28 @@ html,
 body {
   height: 100%;
   width: 100%;
-  background-color: rgb(100, 9, 90);
+  background-color: rgb(96, 41, 129);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 .container {
-  width: 100vw;
-  height: 50vh;
+  width: 40vw;
+  height: 70vh;
+  border-radius: 15px;
   background-color: antiquewhite;
   display: flex;
   justify-content: center;
   align-items: center;
+  border: ;
 }
 
 button {
   position: absolute;
   top: 90%;
-  padding: 3px;
-  width: 145px;
+  padding: 3px 5px;
+  width: 160px;
   height: 60px;
   font-size: 25px;
   font-weight: bold;
@@ -35,5 +37,5 @@ button {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: aliceblue;
   border: 3px solid;
-  background-color: rgb(248, 198, 46);
+  background-color: rgb(229, 17, 127);
 }
